cambio de aside en pagina principal

--- a/contacto.html
+++ b/contacto.html
@@ -20,7 +20,7 @@
                 <li class="op"><a href="fotos.html">Fotos</a></li>
                 <li class="op"><a href="videos.html">Videos</a></li>
                 <li class="op"><a href="documento.html">Documentos</a></li>
-                <li class="op">Contacto</li>
+                <li class="op" style="background: darkgray">Contacto</li>
             </ul>
         </nav>
         <section id="principal">
