--- a/fotos.html
+++ b/fotos.html
@@ -17,7 +17,7 @@
         <nav id="menu">
             <ul>
                 <li class="op"><a href="paginaprincipal.html">Página Principal</a></li>
-                <li class="op">Fotos</li>
+                <li class="op" style="background: darkgray">Fotos</li>
                 <li class="op"><a href="videos.html">Videos</a></li>
                 <li class="op"><a href="documento.html">Documentos</a></li>
                 <li class="op"><a href="contacto.html">Contacto</a></li>
