--- a/paginaprincipal.html
+++ b/paginaprincipal.html
@@ -16,13 +16,23 @@
     </header>
     <nav id="menu">
         <ul>
-            <li class="op">Página Principal</li>
+            <li class="op" style="background: darkgray">Página Principal</li>
             <li class="op"><a href=fotos.html><u>Fotos</u></a></li>
             <li class="op"><a href=videos.html>Videos</a></li>
             <li class="op"><a href=documento.html>Documentos</a></li>
             <li class="op"><a href=contacto.html>Contacto</a></li>
         </ul>
+        
     </nav>
+    <aside>
+        <footer id="aside">
+            <blockquote>Futbol</blockquote>
+            <blockquote>NBA</blockquote>
+            <blockquote>WWE</blockquote>
+            <blockquote>UFC</blockquote>
+            <small>Entrevistas</small> 
+           </footer>
+    </aside>
     <section id="principal">
         <article class="articulo">
             <hgroup>
@@ -36,19 +46,6 @@
             <footer><p>comentarios (0)</p>
             </footer>
         </article>
-    </section>
-       
-    <aside>
-     <blockquote>Holaaaa</blockquote>
-     <blockquote>Siiiiuuuuuu</blockquote>
-     <blockquote>Prueba</blockquote>
-     <blockquote>clase Sabado</blockquote>
-
-    </aside>
-
-    <footer>
-     <small>El exceso de consumo de este producto causa serios daños para la salud</small> 
-    </footer>
     </section>
     </div>
 </body>
