--- a/documento.html
+++ b/documento.html
@@ -19,7 +19,7 @@
                 <li class="op"><a href="paginaprincipal.html">Página Principal</a></li>
                 <li class="op"><a href="fotos.html">Fotos</a></li>
                 <li class="op"><a href="videos.html">Videos</a></li>
-                <li class="op">Documentos</li>
+                <li class="op" style="background: darkgray">Documentos</li>
                 <li class="op"><a href="contacto.html">Contacto</a></li>
             </ul>
         </nav>
