--- a/videos.html
+++ b/videos.html
@@ -18,7 +18,7 @@
             <ul>
                 <li class="op"><a href="paginaprincipal.html">Página Principal</a></li>
                 <li class="op"><a href="fotos.html">Fotos</a></li>
-                <li class="op">Videos</li>
+                <li class="op" style="background: darkgray">Videos</li>
                 <li class="op"><a href="documento.html">Documentos</a></li>
                 <li class="op"><a href="contacto.html">Contacto</a></li>
             </ul>
