Llenado de páginas, se modificó el aside, el color de los articulos y se agregó un logo personal. Falta llenar la página de Resultados y el pie de página... un dato extra en los articulos de la página principal existe la opción más, al dar click sobre ello nos redirige a la página con la noticia completa. Cuando se selecciona una opción del aside o del menú se vuelve de color gris la opción que se seleccionó

--- a/contacto.html
+++ b/contacto.html
@@ -8,9 +8,11 @@
     <link rel="stylesheet" href="principal.css">
     <link rel="stylesheet" href="segundo.css">
 </head>
+<STYLE>A {text-decoration: none; color: rgb(255, 255, 255);} </STYLE>
 <body>
     <div id="divGeneral">
         <header id="cabecera">
+            <img class ="imagen" src="Logo_personal-removebg-preview.png" width = "80">
             <h1 id="tituloprincipal">El Mundo del Deporte</h1>
             <h2 id="subtitulo">Todo sobre deportes!</h2>
         </header>
@@ -20,9 +22,19 @@
                 <li class="op"><a href="fotos.html">Fotos</a></li>
                 <li class="op"><a href="videos.html">Videos</a></li>
                 <li class="op"><a href="documento.html">Documentos</a></li>
-                <li class="op" style="background: darkgray">Contacto</li>
+                <li class="op" style="background: darkgray">Resultados</li>
             </ul>
         </nav>
+        <aside>
+        
+            <footer id="aside">
+                <section style="background: red"><blockquote><a href="futbol.html">Futbol </a></blockquote></section>
+                <section style="background: red"><blockquote><a href="nba.html">NBA</a></blockquote></section>
+                <section style="background: red"><blockquote><a href="wwe.html">WWE</a></blockquote></section>
+                <section style="background: red"> <blockquote><a href="ufc.html">UFC</a></blockquote></section>
+                <section style="background: red"><blockquote><a href="otros.html">Polideportivo</a></blockquote> </section>
+               </footer>
+        </aside>
         <section id="principal">
             <article class="articulo">
                 <header>
