--- a/videos.html
+++ b/videos.html
@@ -8,9 +8,11 @@
     <link rel="stylesheet" href="principal.css">
     <link rel="stylesheet" href="segundo.css">
 </head>
+<STYLE>A {text-decoration: none; color: rgb(255, 255, 255);} </STYLE>
 <body>
     <div id="divGeneral">
         <header id="cabecera">
+            <img class ="imagen" src="Logo_personal-removebg-preview.png" width = "80">
             <h1 id="tituloprincipal">El Mundo del Deporte</h1>
             <h2 id="subtitulo">Todo sobre deportes!</h2>
         </header>
@@ -20,16 +22,58 @@
                 <li class="op"><a href="fotos.html">Fotos</a></li>
                 <li class="op" style="background: darkgray">Videos</li>
                 <li class="op"><a href="documento.html">Documentos</a></li>
-                <li class="op"><a href="contacto.html">Contacto</a></li>
+                <li class="op"><a href="contacto.html">Resultados</a></li>
             </ul>
         </nav>
+        <aside>
+        
+            <footer id="aside">
+                <section style="background: red"><blockquote><a href="futbol.html">Futbol </a></blockquote></section>
+                <section style="background: red"><blockquote><a href="nba.html">NBA</a></blockquote></section>
+                <section style="background: red"><blockquote><a href="wwe.html">WWE</a></blockquote></section>
+                <section style="background: red"> <blockquote><a href="ufc.html">UFC</a></blockquote></section>
+                <section style="background: red"><blockquote><a href="otros.html">Polideportivo</a></blockquote> </section>
+               </footer>
+        </aside>
         <section id="principal">
             <article class="articulo">
                 <header>
                     <hgroup>
                         <h1 class="tituloheaderfoto">Sorteo de grupos de la Champions League 2022/2023:</h1>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/eMa7jP-GP44" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </hgroup>
-                    
+                </header>
+            </article>
+            <article class="articulo">
+                <header>
+                    <hgroup>
+                        <h1 class="tituloheaderfoto">Mejores momentoss de Kevin Durant</h1>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/T6bFE8PyWDA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </hgroup>
+                </header>
+            </article>
+            <article class="articulo">
+                <header>
+                    <hgroup>
+                        <h1 class="tituloheaderfoto">Un clásico de la WWE: Roman Reings vs Edge</h1>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/QXKdez5zixo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </hgroup>
+                </header>
+            </article>
+            <article class="articulo">
+                <header>
+                    <hgroup>
+                        <h1 class="tituloheaderfoto">Nate Diaz vs Conor McGregor 1</h1>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/LPpqcvIlrhQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </hgroup>
+                </header>
+            </article>
+            <article class="articulo">
+                <header>
+                    <hgroup>
+                        <h1 class="tituloheaderfoto">Tenis 2022 US OPEN</h1>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/MMYkhRlcUW0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </hgroup>
                 </header>
             </article>
         </section>
