Se agregó el footer a todas las páginas con conexión a mi perfil de facebook e instagram... Se llenó la última página de enfrentamientos deportivos y se afinaron unos detalles estéticos

--- a/contacto.html
+++ b/contacto.html
@@ -22,7 +22,7 @@
                 <li class="op"><a href="fotos.html">Fotos</a></li>
                 <li class="op"><a href="videos.html">Videos</a></li>
                 <li class="op"><a href="documento.html">Documentos</a></li>
-                <li class="op" style="background: darkgray">Resultados</li>
+                <li class="op" style="background: darkgray">Enfrentamientos</li>
             </ul>
         </nav>
         <aside>
@@ -36,15 +36,117 @@
                </footer>
         </aside>
         <section id="principal">
-            <article class="articulo">
-                <header>
-                    <hgroup>
-                        <h1 class="tituloheaderfoto">Sorteo de grupos de la Champions League 2022/2023:</h1>
-                    </hgroup>
-                    
-                </header>
+        <article class="articulo2">
+            <hgroup>
+                <h1 class="tituloheaderfoto">Enfrentamientos de la Semana</h1>
+                <h2>Premier League</h2>
+            </hgroup>
+            <small id="equipo"><span><em><strong>Southampton</strong></em></span></small>
+            <small id="VS"><span><em>VS</em></span></small>
+            <small id="equipo2"><span><em><strong>Manchester United</strong></em></span></small>
+            <p>.</p>
+            <small id="equipo"><span><em><strong>Everton</strong></em></span></small>
+            <small id="VS"><span><em>VS</em></span></small>
+            <small id="equipo2"><span><em><strong>Brentford</strong></em></span></small>
+            <p>.</p>
+            <small id="equipo"><span><em><strong>Arsenal</strong></em></span></small>
+            <small id="VS"><span><em>VS</em></span></small>
+            <small id="equipo2"><span><em><strong>Fulham</strong></em></span></small>
+            <p>.</p>
+            <small id="equipo"><span><em><strong>Chelsea</strong></em></span></small>
+            <small id="VS"><span><em>VS</em></span></small>
+            <small id="equipo2"><span><em><strong>Leicester City</strong></em></span></small>
+            <p>.</p>
+            <small id="equipo"><span><em><strong>Manchester City</strong></em></span></small>
+            <small id="VS"><span><em>VS</em></span></small>
+            <small id="equipo2"><span><em><strong>Crystal Palace</strong></em></span></small>
+            <p>.</p>
+            
             </article>
+        <article class="articulo2">
+            <hgroup>
+                <h2>LaLiga</h2>
+            </hgroup>
+            <small id="equipo"><span><em><strong>RCD Espanyol</strong></em></span></small>
+            <small id="VS"><span><em>VS</em></span></small>
+            <small id="equipo2"><span><em><strong>Real Madrid</strong></em></span></small>
+            <p>.</p>
+            <small id="equipo"><span><em><strong>Elche C.F</strong></em></span></small>
+            <small id="VS"><span><em>VS</em></span></small>
+            <small id="equipo2"><span><em><strong>Real Sociedad</strong></em></span></small>
+            <p>.</p>
+            <small id="equipo"><span><em><strong>Getafe</strong></em></span></small>
+            <small id="VS"><span><em>VS</em></span></small>
+            <small id="equipo2"><span><em><strong>Villarreal</strong></em></span></small>
+            <p>.</p>
+            <small id="equipo"><span><em><strong>Barcelona</strong></em></span></small>
+            <small id="VS"><span><em>VS</em></span></small>
+            <small id="equipo2"><span><em><strong>Valladolid</strong></em></span></small>
+            <p>.</p>
+            <small id="equipo"><span><em><strong>Almería</strong></em></span></small>
+            <small id="VS"><span><em>VS</em></span></small>
+            <small id="equipo2"><span><em><strong>Sevilla</strong></em></span></small>
+            <p>.</p>
+            </article>
+            <article class="articulo2">
+                <hgroup>
+                    <h2>Major League Soccer</h2>
+                </hgroup>
+                <small id="equipo"><span><em><strong>FC Dallas</strong></em></span></small>
+                <small id="VS"><span><em>VS</em></span></small>
+                <small id="equipo2"><span><em><strong>Real Salt Lake</strong></em></span></small>
+                <p>.</p>
+                <small id="equipo"><span><em><strong>Cincinnati</strong></em></span></small>
+                <small id="VS"><span><em>VS</em></span></small>
+                <small id="equipo2"><span><em><strong>Columbus Crew</strong></em></span></small>
+                <p>.</p>
+                <small id="equipo"><span><em><strong>New York RB</strong></em></span></small>
+                <small id="VS"><span><em>VS</em></span></small>
+                <small id="equipo2"><span><em><strong>Inter Miami</strong></em></span></small>
+                <p>.</p>
+                <small id="equipo"><span><em><strong>New England</strong></em></span></small>
+                <small id="VS"><span><em>VS</em></span></small>
+                <small id="equipo2"><span><em><strong>La Galaxy</strong></em></span></small>
+                <p>.</p>
+                <small id="equipo"><span><em><strong>Charlotte Football Club</strong></em></span></small>
+                <small id="VS"><span><em>VS</em></span></small>
+                <small id="equipo2"><span><em><strong>Orlando City</strong></em></span></small>
+                <p>.</p>
+                </article>
+                <article class="articulo2">
+                    <hgroup>
+                        <h2>NBA</h2>
+                    </hgroup>
+                    <small id="equipo"><span><em><strong>Golden State Warriors</strong></em></span></small>
+                    <small id="VS"><span><em>VS</em></span></small>
+                    <small id="equipo2"><span><em><strong>Denver Nuggets</strong></em></span></small>
+                    <p>.</p>
+                    <small id="equipo"><span><em><strong>Miami Heat</strong></em></span></small>
+                    <small id="VS"><span><em>VS</em></span></small>
+                    <small id="equipo2"><span><em><strong>Atlanta Hawks</strong></em></span></small>
+                    <p>.</p>
+                    <small id="equipo"><span><em><strong>Dallas Mavericks</strong></em></span></small>
+                    <small id="VS"><span><em>VS</em></span></small>
+                    <small id="equipo2"><span><em><strong>Utah Jazz</strong></em></span></small>
+                    <p>.</p>
+                    <small id="equipo"><span><em><strong>Boston Celtics</strong></em></span></small>
+                    <small id="VS"><span><em>VS</em></span></small>
+                    <small id="equipo2"><span><em><strong>Brooklyn Nets</strong></em></span></small>
+                    <p>.</p>
+                    <small id="equipo"><span><em><strong>Philadelphia 76ers</strong></em></span></small>
+                    <small id="VS"><span><em>VS</em></span></small>
+                    <small id="equipo2"><span><em><strong>Toronto Raptors</strong></em></span></small>
+                    <p>.</p>
+                    </article>
         </section>
     </div>
+    <footer id="pie" data-aos="fade-up"
+    data-aos-duration="1500">
+    <small id ="nombre"><p id="parrafo" style="text-align: right">Javier Linares de León</p></small>
+     <small id="nombre2"><p id="parrafo" style="text-align: right">Técnico Universitario en Informática</p></small>
+     <small id="nombre3"><p id="parrafo" style="text-align: right">Programación Web</p></small>
+     <small style="text-align: right">NO OLVIDES SEGUIRNOS EN NUESTRAS REDES SOCIALES</small>
+     <h2 id="redes" style="text-align: right"><a href="https://www.facebook.com/javier.linares.79656921"><b> <mark style="background: blue">Facebook</mark>    </b></a> <a href="https://www.instagram.com/javierdleon_01/" ><b><mark style="background: pink" >    Instagram </mark>   </b></a></h2>
+    </footer>
 </body>
 </html>
