--- a/videos.html
+++ b/videos.html
@@ -22,7 +22,7 @@
                 <li class="op"><a href="fotos.html">Fotos</a></li>
                 <li class="op" style="background: darkgray">Videos</li>
                 <li class="op"><a href="documento.html">Documentos</a></li>
-                <li class="op"><a href="contacto.html">Resultados</a></li>
+                <li class="op"><a href="contacto.html">Enfrentamientos</a></li>
             </ul>
         </nav>
         <aside>
@@ -37,46 +37,44 @@
         </aside>
         <section id="principal">
             <article class="articulo">
-                <header>
                     <hgroup>
                         <h1 class="tituloheaderfoto">Sorteo de grupos de la Champions League 2022/2023:</h1>
                         <iframe width="560" height="315" src="https://www.youtube.com/embed/eMa7jP-GP44" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </hgroup>
-                </header>
             </article>
             <article class="articulo">
-                <header>
                     <hgroup>
                         <h1 class="tituloheaderfoto">Mejores momentoss de Kevin Durant</h1>
                         <iframe width="560" height="315" src="https://www.youtube.com/embed/T6bFE8PyWDA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </hgroup>
-                </header>
             </article>
             <article class="articulo">
-                <header>
                     <hgroup>
                         <h1 class="tituloheaderfoto">Un clásico de la WWE: Roman Reings vs Edge</h1>
                         <iframe width="560" height="315" src="https://www.youtube.com/embed/QXKdez5zixo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </hgroup>
-                </header>
             </article>
             <article class="articulo">
-                <header>
                     <hgroup>
                         <h1 class="tituloheaderfoto">Nate Diaz vs Conor McGregor 1</h1>
                         <iframe width="560" height="315" src="https://www.youtube.com/embed/LPpqcvIlrhQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </hgroup>
-                </header>
             </article>
             <article class="articulo">
-                <header>
                     <hgroup>
                         <h1 class="tituloheaderfoto">Tenis 2022 US OPEN</h1>
                         <iframe width="560" height="315" src="https://www.youtube.com/embed/MMYkhRlcUW0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </hgroup>
-                </header>
             </article>
         </section>
     </div>
+    <footer id="pie" data-aos="fade-up"
+    data-aos-duration="1500">
+    <small id ="nombre"><p id="parrafo" style="text-align: right">Javier Linares de León</p></small>
+     <small id="nombre2"><p id="parrafo" style="text-align: right">Técnico Universitario en Informática</p></small>
+     <small id="nombre3"><p id="parrafo" style="text-align: right">Programación Web</p></small>
+     <small style="text-align: right">NO OLVIDES SEGUIRNOS EN NUESTRAS REDES SOCIALES</small>
+     <h2 id="redes" style="text-align: right"><a href="https://www.facebook.com/javier.linares.79656921"><b> <mark style="background: blue">Facebook</mark>    </b></a> <a href="https://www.instagram.com/javierdleon_01/" ><b><mark style="background: pink" >    Instagram </mark>   </b></a></h2>
+    </footer>
 </body>
 </html>
