--- a/paginaprincipal.html
+++ b/paginaprincipal.html
@@ -25,7 +25,7 @@
             <li class="op"><a href=fotos.html>Fotos</a></li>
             <li class="op"><a href=videos.html>Videos</a></li>
             <li class="op"><a href=documento.html>Documentos</a></li>
-            <li class="op"><a href=contacto.html>resultados</a></li>
+            <li class="op"><a href=contacto.html>Enfrentamientos</a></li>
         </ul>
         
     </nav>
@@ -88,6 +88,14 @@
             </footer>
         </article>
     </section>
+    </div>
+    <footer id="pie" data-aos="fade-up"
+    data-aos-duration="1500">
+    <small id ="nombre"><p id="parrafo" style="text-align: right">Javier Linares de León</p></small>
+     <small id="nombre2"><p id="parrafo" style="text-align: right">Técnico Universitario en Informática</p></small>
+     <small id="nombre3"><p id="parrafo" style="text-align: right">Programación Web</p></small>
+     <small style="text-align: right">NO OLVIDES SEGUIRNOS EN NUESTRAS REDES SOCIALES</small>
+     <h2 id="redes" style="text-align: right"><a href="https://www.facebook.com/javier.linares.79656921"><b> <mark style="background: blue">Facebook</mark>    </b></a> <a href="https://www.instagram.com/javierdleon_01/" ><b><mark style="background: pink" >    Instagram </mark>   </b></a></h2>
+    </footer>
 </body>
-
 </html>
