Cambios realizados en la revisión

--- a/paginaprincipal.html
+++ b/paginaprincipal.html
@@ -89,8 +89,7 @@
         </article>
     </section>
     </div>
-    <footer id="pie" data-aos="fade-up"
-    data-aos-duration="1500">
+    <footer id="pie">
     <small id ="nombre"><p id="parrafo" style="text-align: right">Javier Linares de León</p></small>
      <small id="nombre2"><p id="parrafo" style="text-align: right">Técnico Universitario en Informática</p></small>
      <small id="nombre3"><p id="parrafo" style="text-align: right">Programación Web</p></small>
